--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
   },
   "devDependencies": {
     "ant-design-vue": "^1.4.10",
+    "antd-dayjs-webpack-plugin": "^0.0.8",
     "autoprefixer": "^7.1.2",
+    "axios": "^0.19.1",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.1",
+    "babel-plugin-import": "^1.13.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
