--- a/.babelrc
+++ b/.babelrc
@@ -17,6 +17,14 @@
   ],
   "plugins": [
     "transform-vue-jsx",
-    "transform-runtime"
+    "transform-runtime",
+    [
+      "import",
+      {
+        "libraryName": "ant-design-vue",
+        "libraryDirectory": "es",
+        "style": "css"
+      }
+    ]
   ]
 }
