--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "element-ui": "^2.13.1",
     "js-md5": "^0.7.3",
     "qs": "^6.9.1",
+    "selenium-webdriver": "^4.0.0-alpha.7",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
