--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@antv/g2plot": "^1.1.3",
     "chromedriver": "^81.0.0",
     "element-ui": "^2.13.1",
     "js-md5": "^0.7.3",
