--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "axios": "^0.19.2",
         "babel-plugin-import": "^1.13.0",
         "core-js": "^3.6.5",
+        "echarts": "^4.8.0",
         "js-cookie": "^2.2.1",
         "js-md5": "^0.7.3",
         "moment": "^2.26.0",
@@ -30,15 +31,21 @@
         "@vue/cli-service": "~4.4.0",
         "@vue/eslint-config-prettier": "^6.0.0",
         "@vue/test-utils": "^1.0.3",
+        "babel-core": "^6.26.3",
         "babel-eslint": "^10.1.0",
+        "babel-loader": "^8.1.0",
+        "babel-plugin-lodash": "^3.3.4",
+        "babel-preset-env": "^1.7.0",
         "eslint": "^6.7.2",
         "eslint-plugin-prettier": "^3.1.3",
         "eslint-plugin-vue": "^6.2.2",
         "less": "^3.0.4",
         "less-loader": "^5.0.0",
         "lint-staged": "^9.5.0",
+        "lodash-webpack-plugin": "^0.11.5",
         "prettier": "^1.19.1",
-        "vue-template-compiler": "^2.6.11"
+        "vue-template-compiler": "^2.6.11",
+        "webpack": "^4.43.0"
     },
     "gitHooks": {
         "pre-commit": "lint-staged"
