--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "lint-staged": "^9.5.0",
         "lodash-webpack-plugin": "^0.11.5",
         "prettier": "^1.19.1",
+        "vue-clipboard2": "^0.3.1",
         "vue-template-compiler": "^2.6.11",
         "webpack": "^4.43.0"
     },
