--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "axios": "^0.19.2",
         "babel-plugin-import": "^1.13.0",
         "core-js": "^3.6.5",
+        "crypto-js": "^4.0.0",
         "echarts": "^4.8.0",
         "js-cookie": "^2.2.1",
         "js-md5": "^0.7.3",
